{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 83,
  "lineage": "f8045795-339b-f672-8d7a-d12150904cb3",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "rabbit_mq_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.0.0.20",
            "address_type": "INTERNAL",
            "creation_timestamp": "2023-12-13T02:04:38.075-08:00",
            "id": "projects/toko-test-408009/regions/us-east4/addresses/rabbit-mq-internal",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "rabbit-mq-internal",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "toko-test-408009",
            "purpose": "GCE_ENDPOINT",
            "region": "us-east4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/toko-test-408009/regions/us-east4/addresses/rabbit-mq-internal",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/toko-test-408009/regions/us-east4/subnetworks/toko-test-408009",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/toko-test-408009/zones/us-east4-a/instances/rabbitmq-server"
            ]
          },
          "dependencies": [
            "google_compute_network.solana_etl",
            "google_compute_subnetwork.solana_etl"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "rabbit_mq_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.212.21.90",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-12-13T02:04:02.367-08:00",
            "id": "projects/toko-test-408009/regions/us-east4/addresses/rabbitmq-public",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "rabbitmq-public",
            "network_tier": "STANDARD",
            "prefix_length": 0,
            "project": "toko-test-408009",
            "region": "us-east4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/toko-test-408009/regions/us-east4/addresses/rabbitmq-public",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/toko-test-408009/zones/us-east4-a/instances/rabbitmq-server"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "solana_rpc_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.0.0.10",
            "address_type": "INTERNAL",
            "creation_timestamp": "2023-12-13T02:04:38.330-08:00",
            "id": "projects/toko-test-408009/regions/us-east4/addresses/solana-rpc-internal",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "solana-rpc-internal",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "toko-test-408009",
            "purpose": "GCE_ENDPOINT",
            "region": "us-east4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/toko-test-408009/regions/us-east4/addresses/solana-rpc-internal",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/toko-test-408009/regions/us-east4/subnetworks/toko-test-408009",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/toko-test-408009/zones/us-east4-a/instances/solana-rpc"
            ]
          },
          "dependencies": [
            "google_compute_network.solana_etl",
            "google_compute_subnetwork.solana_etl"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "solana_rpc_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.212.42.100",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-12-13T02:04:02.241-08:00",
            "id": "projects/toko-test-408009/regions/us-east4/addresses/solana-rpc-public",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "solana-rpc-public",
            "network_tier": "STANDARD",
            "prefix_length": 0,
            "project": "toko-test-408009",
            "region": "us-east4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/toko-test-408009/regions/us-east4/addresses/solana-rpc-public",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/toko-test-408009/zones/us-east4-a/instances/solana-rpc"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh_iap",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-12-13T02:04:25.021-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/toko-test-408009/global/firewalls/allow-ssh-iap",
            "log_config": [],
            "name": "allow-ssh-iap",
            "network": "https://www.googleapis.com/compute/v1/projects/toko-test-408009/global/networks/toko-test-408009-vpc",
            "priority": 1000,
            "project": "toko-test-408009",
            "self_link": "https://www.googleapis.com/compute/v1/projects/toko-test-408009/global/firewalls/allow-ssh-iap",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.solana_etl"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "solana-rpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8000-10000"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "8000-10000"
                ],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2023-12-13T02:04:24.926-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/toko-test-408009/global/firewalls/solana-rpc",
            "log_config": [],
            "name": "solana-rpc",
            "network": "https://www.googleapis.com/compute/v1/projects/toko-test-408009/global/networks/toko-test-408009-vpc",
            "priority": 1000,
            "project": "toko-test-408009",
            "self_link": "https://www.googleapis.com/compute/v1/projects/toko-test-408009/global/firewalls/solana-rpc",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "solana"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.solana_etl"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "rabbitmq",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": false,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-minimal-2204-jammy-v20230715",
                    "size": 1200,
                    "type": "pd-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/toko-test-408009/zones/us-east4-a/disks/rabbitmq-server"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Ice Lake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/toko-test-408009/zones/us-east4-a/instances/rabbitmq-server",
            "instance_id": "5213235666427853588",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n2-standard-8",
            "metadata_fingerprint": "-PUCDzbBBL0=",
            "min_cpu_platform": "Intel Ice Lake",
            "name": "rabbitmq-server",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.212.21.90",
                    "network_tier": "STANDARD"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/toko-test-408009/global/networks/toko-test-408009-vpc",
                "network_ip": "10.0.0.20",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/toko-test-408009/regions/us-east4/subnetworks/toko-test-408009",
                "subnetwork_project": "toko-test-408009"
              }
            ],
            "project": "toko-test-408009",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/toko-test-408009/zones/us-east4-a/instances/rabbitmq-server",
            "service_account": [
              {
                "email": "compute-service-account@toko-test-408009.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring.write",
                  "https://www.googleapis.com/auth/service.management.readonly",
                  "https://www.googleapis.com/auth/servicecontrol",
                  "https://www.googleapis.com/auth/trace.append"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-east4-a"
          },
          "dependencies": [
            "google_compute_address.rabbit_mq_internal",
            "google_compute_address.rabbit_mq_public",
            "google_compute_network.solana_etl",
            "google_compute_subnetwork.solana_etl",
            "google_service_account.solana_etl"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "solana_rpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": false,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20231010",
                    "size": 500,
                    "type": "pd-ssd"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/toko-test-408009/zones/us-east4-a/disks/solana-rpc"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Ice Lake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/toko-test-408009/zones/us-east4-a/instances/solana-rpc",
            "instance_id": "3645019703657906007",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n2-highmem-64",
            "metadata_fingerprint": "-PUCDzbBBL0=",
            "min_cpu_platform": "Intel Ice Lake",
            "name": "solana-rpc",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.212.42.100",
                    "network_tier": "STANDARD"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/toko-test-408009/global/networks/toko-test-408009-vpc",
                "network_ip": "10.0.0.10",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/toko-test-408009/regions/us-east4/subnetworks/toko-test-408009",
                "subnetwork_project": "toko-test-408009"
              }
            ],
            "project": "toko-test-408009",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "scratch_disk": [
              {
                "device_name": "local-ssd-0",
                "interface": "NVME",
                "size": 375
              },
              {
                "device_name": "local-ssd-1",
                "interface": "NVME",
                "size": 375
              },
              {
                "device_name": "local-ssd-2",
                "interface": "NVME",
                "size": 375
              },
              {
                "device_name": "local-ssd-3",
                "interface": "NVME",
                "size": 375
              },
              {
                "device_name": "local-ssd-4",
                "interface": "NVME",
                "size": 375
              },
              {
                "device_name": "local-ssd-5",
                "interface": "NVME",
                "size": 375
              },
              {
                "device_name": "local-ssd-6",
                "interface": "NVME",
                "size": 375
              },
              {
                "device_name": "local-ssd-7",
                "interface": "NVME",
                "size": 375
              },
              {
                "device_name": "local-ssd-8",
                "interface": "NVME",
                "size": 375
              },
              {
                "device_name": "local-ssd-9",
                "interface": "NVME",
                "size": 375
              },
              {
                "device_name": "local-ssd-10",
                "interface": "NVME",
                "size": 375
              },
              {
                "device_name": "local-ssd-11",
                "interface": "NVME",
                "size": 375
              },
              {
                "device_name": "local-ssd-12",
                "interface": "NVME",
                "size": 375
              },
              {
                "device_name": "local-ssd-13",
                "interface": "NVME",
                "size": 375
              },
              {
                "device_name": "local-ssd-14",
                "interface": "NVME",
                "size": 375
              },
              {
                "device_name": "local-ssd-15",
                "interface": "NVME",
                "size": 375
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/toko-test-408009/zones/us-east4-a/instances/solana-rpc",
            "service_account": [
              {
                "email": "compute-service-account@toko-test-408009.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring.write",
                  "https://www.googleapis.com/auth/service.management.readonly",
                  "https://www.googleapis.com/auth/servicecontrol",
                  "https://www.googleapis.com/auth/trace.append"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "solana"
            ],
            "tags_fingerprint": "y08fa8ZiHQ8=",
            "zone": "us-east4-a"
          },
          "dependencies": [
            "google_compute_address.solana_rpc_internal",
            "google_compute_address.solana_rpc_public",
            "google_compute_network.solana_etl",
            "google_compute_subnetwork.solana_etl",
            "google_service_account.solana_etl"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "solana_etl",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/toko-test-408009/global/networks/toko-test-408009-vpc",
            "mtu": 1460,
            "name": "toko-test-408009-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "toko-test-408009",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/toko-test-408009/global/networks/toko-test-408009-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "solana_etl",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-12-13T02:04:25.555-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/toko-test-408009/regions/us-east4/subnetworks/toko-test-408009",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "toko-test-408009",
            "network": "https://www.googleapis.com/compute/v1/projects/toko-test-408009/global/networks/toko-test-408009-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "toko-test-408009",
            "purpose": "PRIVATE",
            "region": "us-east4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/toko-test-408009/regions/us-east4/subnetworks/toko-test-408009",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.solana_etl"
          ]
        }
      ]
    }
  ]
}